# felidae

./: CMakeLists.txt  LICENSE.md  README.md
src/: felidae.cpp  felidae.h  k12_blake3.c  k12_blake3.h
src/tests/: api-example.cpp  benchmark.cpp
